<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>battery_state</name>
  <version>0.0.0</version>
  <description>Package used to obtain Battery percentage and sent warning to the user</description>
  <maintainer email="mohamed.mohamed0123@eng-st.cu.edu.eg">Newir</maintainer>
  <license>BSD-2-Clause</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
